--- a/index.html
+++ b/index.html
@@ -5,21 +5,38 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
-
+<div id="my_dataviz"  class="svg-container"></div>
+<div class="tooltip"></div>
+<style>
+  .svg-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    vertical-align: top;
+    overflow: hidden;
+}
+.svg-content {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+</style>
 <script>
 
 
 // set the dimensions and margins of the graph
 var margin = {top: 30, right: 30, bottom: 200, left: 200},
     width = 700 - margin.left - margin.right,
-    height = 700 - margin.top - margin.bottom;
+    height = 450 - margin.top - margin.bottom;
+    viewbox_width = 800
+    viewbox_height = 800
 
 // append the svg object to the body of the page
 var svg = d3.select("#my_dataviz")
   .append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
+    .attr("viewBox", "0 0 "+viewbox_width +" "+ viewbox_height)
   .append("g")
     .attr("transform",
           "translate(" + margin.left + "," + margin.top + ")");
